<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/privacyheading"
                android:textSize="17dp"
                android:textColor="@color/black_transparent_color" />

           <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
               android:textSize="17dp"
                android:gravity="left"
                android:text="@string/privacy1"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy2"
                android:textColor="@color/black_transparent_color" />

           <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
               android:textSize="17dp"
                android:text="@string/privacy3"
                android:textColor="@color/black_transparent_color" />

           <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
               android:textSize="17dp"
                android:text="@string/privacy4"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy5"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy6"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy7"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy8"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy9"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy10"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy11"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacy12"
                android:textColor="@color/black_transparent_color" />

            <in.pjitsol.zapnabit.Ui.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="17dp"
                android:text="@string/privacyending"
                android:textColor="@color/black_transparent_color" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>