<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp" >

        <in.pjitsol.zapnabit.Ui.JustifyTextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="14dp"
            android:text="@string/searchinfo1"
            android:textColor="@color/black_transparent_color" />

        <in.pjitsol.zapnabit.Ui.JustifyTextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="14dp"
            android:text="@string/searchinfo2"
            android:textColor="@color/black_transparent_color" />

        <in.pjitsol.zapnabit.Ui.JustifyTextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt2"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/searchinfo3"
            android:textColor="@color/black_transparent_color" />

        <in.pjitsol.zapnabit.Ui.JustifyTextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt3"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/searchinfo4"
            android:textColor="@color/black_transparent_color" />

        <ImageView
            android:id="@+id/imgwarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/warning"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/txt4"/>
        <in.pjitsol.zapnabit.Ui.JustifyTextView
            android:id="@+id/txt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt4"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2dp"
            android:textSize="12dp"
            android:layout_toRightOf="@+id/imgwarning"
            android:gravity="left"
            android:text="@string/warningstart"
            android:textColor="@color/red" />
        <in.pjitsol.zapnabit.Ui.JustifyTextView
            android:id="@+id/txt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt6"
            android:textSize="12dp"
            android:gravity="left"
            android:text="@string/warning"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_oksearch"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt5"
            android:layout_marginTop="20dp"
            android:background="@color/red"
            android:text="OK"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>