<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <in.pjitsol.zapnabit.Ui.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:padding="10dp"
                android:text="@string/saveitem"
                android:textColor="@color/black_transparent_color"
                android:textSize="18dp"
                app:fontName="GothamMedium" />

            <in.pjitsol.zapnabit.Ui.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/update"
                android:textColor="@color/black_transparent_color"
                android:textSize="16dp"
                app:fontName="GothamLight" />

            <in.pjitsol.zapnabit.Ui.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/takepicture"
                android:textColor="@color/black_transparent_color"
                android:textSize="16dp"
                app:fontName="GothamLight" />

            <in.pjitsol.zapnabit.Ui.CustomTextView
                android:id="@+id/text_takepicture"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/red"
                android:gravity="center"
                android:padding="15dp"
                android:text="Take Picture"
                android:textColor="@color/white"
                android:textSize="17dp"
                app:fontName="GothamLight" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>
